# braille-snake

./: .gitignore  CMakeLists.txt  README.md
demos/cast/: demo.cast  one-line.cast  options.cast
include/: braille-snake.h
src/: char-encoder.c  double-buffer.c  game.c  game.h  main.c  mode-tmux.c  mode-tmux.h  mode-tty.c  mode-tty.h  tmux-server.c
tests/: char_list.c
tmux-setup/: tmux-hybrid.conf  tmux-optmized.conf  tmux-regular.conf  tmux.conf
